--- a/index.html
+++ b/index.html
@@ -163,6 +163,19 @@
                 </div>
             </div>
         </div>
+        <div class="bgSubmit" id="success">
+            <div class="content">
+                <span class="close"></span>
+                <div class="modal-body">
+
+                    <p class="hero-text">
+                        Thank you for submitting your registration details!
+                    </p>
+                    <input class="btn-close" type="submit" class="button" value="Close" />
+
+                </div>
+            </div>
+        </div>
     </main>
     <footer>
         <p class="copyrights">
@@ -170,6 +183,7 @@
         </p>
     </footer>
     <script src="js/modal.js"></script>
+    <script src="js/form.js"></script>
 </body>
 
 </html>
