css mobile version fix

--- a/index.html
+++ b/index.html
@@ -13,12 +13,12 @@
 <body>
     <div class="topnav" id="myTopnav">
         <div class="header-logo">
-            <img alt="logo" src="img/Logo.png" width="auto" height="auto" />
+            <img alt="logo" src="img/Logo.png" width="auto" height="auto" id="logoM" />
         </div>
         <div class="main-navbar">
 
-            <a href="#" class="active"><span>Home</span></a>
-            <a href="#"><span>Event Details</span></a>
+
+            <a href="#" class="active"><span>Event Details</span></a>
             <a href="#"><span>About Us</span></a>
             <a href="#"><span>Contact</span></a>
             <a href="#"><span>Past Events</span></a>
