validate function fixed

--- a/index.html
+++ b/index.html
@@ -146,14 +146,14 @@
                   type="checkbox"
                   id="checkbox1"
                   name="checkbox1"
-                  checked
+                  value="yes"
                 />
                 <label class="checkbox2-label" for="checkbox1" required>
                   <span class="checkbox-icon"></span>
-                  I have read and I agree to GameOn's terms and conditions.
+                  I have read and I agree to the terms and conditions.
                 </label>
                             <br>
-                            <input class="checkbox-input" type="checkbox" id="checkbox2" />
+                            <input class="checkbox-input" type="checkbox" id="checkbox2" value="yes" />
                             <label class="checkbox2-label" for="checkbox2">
                   <span class="checkbox-icon"></span>
                   Please sign me up to be notified about future events.
@@ -164,17 +164,7 @@
                     </form>
                 </div>
             </div>
-            <div class="bgSubmit" id="success">
-                <div class="content">
-                    <span class="close"></span>
-                    <p class="hero-text">
-                        Thanks for your submission!<br> We were happy to hear from <br> You!
-                    </p>
-                    <!--Close Button Here-->
-                    <input class="btn-submit" type="submit" class="button" value="Close" />
-                </div>
-            </div>
-        </div>
+
 
     </main>
     <footer>
@@ -182,6 +172,17 @@
             Copyright 2014 - 2020, GameOn Inc.
         </p>
     </footer>
+    <div class="bgSubmit" id="success">
+        <div class="content">
+            <span class="close"></span>
+            <p class="hero-text">
+                Thanks for your submission!<br> We were happy to hear from <br> You!
+            </p>
+            <!--Close Button Here-->
+            <input class="btn-submit" type="submit" class="button" value="Close" />
+        </div>
+    </div>
+    </div>
     <script src="js/modal.js"></script>
     <script src="js/form2.js"></script>
 </body>
