--- a/index.html
+++ b/index.html
@@ -55,27 +55,27 @@
                 <div class="modal-body">
                     <form name="reserve" action="index.html" method="get" onsubmit="return validate();">
                         <div class="formData">
-                            <label>First Name</label><br>
+                            <label for="first">First Name</label><br>
                             <input class="text-control" type="text" id="first" name="first" minlength="2" required/><br>
                             <div class="error" id="firstError"></div>
                         </div>
                         <div class="formData">
-                            <label>Last Name</label><br>
+                            <label for="last">Last Name</label><br>
                             <input class="text-control" type="text" id="last" name="last" minlength="2" required/><br>
                             <div class="error" id="lastError"></div>
                         </div>
                         <div class="formData">
-                            <label>Email</label><br>
+                            <label for="email">Email</label><br>
                             <input class="text-control" type="email" id="email" name="email" required/><br>
                             <div class="error" id="mailError"></div>
                         </div>
                         <div class="formData">
-                            <label>Birthdate</label><br>
+                            <label for="birthdate">Birthdate</label><br>
                             <input class="text-control" type="date" id="birthdate" name="birthdate" required/><br>
                             <div class="error" id="birthdateError"></div>
                         </div>
                         <div class="formData">
-                            <label>How many tournaments have you attended? </label><br>
+                            <label for="quantity">How many tournaments have you attended? </label><br>
                             <input type="number" class="text-control" id="quantity" name="quantity" min="0" max="99" required>
                             <div class="error" id="quantityError"></div>
                         </div>
