--- a/index.html
+++ b/index.html
@@ -180,13 +180,13 @@
         </p>
     </footer>
     <div class="bgSubmit" id="success">
-        <div class="content">
+        <div class="content" id="success-content">
             <span class="close"></span>
-            <p class="hero-text">
-                Thanks for your submission!<br> We were happy to hear from <br> You!
+            <p class="hero-text" id="success-text">
+                Thank you for<br> submitting your <br> registration details
             </p>
             <!--Close Button Here-->
-            <input class="btn-submit" type="submit" class="button" value="Close" />
+            <input class="btn-submit" type="submit" id="submit-success" class="button" value="Close" />
         </div>
     </div>
     </div>
