New York button fix

--- a/index.html
+++ b/index.html
@@ -81,8 +81,9 @@
                         </div>
                         <p class="text-label">Which location?</p>
                         <div class="formData">
-                            <input class="checkbox-input" type="radio" id="location1" name="location" value="New York" />
                             <div class="error" id="locationError"></div>
+                            <input class="checkbox-input" type="radio" id="location1" name="location" value="New York" />
+
                             <label class="checkbox-label" for="location1">
                               
                   <span class="checkbox-icon"></span>
@@ -179,7 +180,7 @@
             Copyright 2014 - 2020, GameOn Inc.
         </p>
     </footer>
-    <div class="bgSubmit" id="success">
+    <div class="bgSubmit bground" id="success">
         <div class="content" id="success-content">
             <form onsubmit="closeBtn();">
                 <span class="close" id="sucClose"></span>
