close button function

--- a/index.html
+++ b/index.html
@@ -168,7 +168,7 @@
                 </label>
                             <br>
                         </div>
-                        <input class="btn-submit" type="submit" class="button" value="Go" />
+                        <button class="btn-submit" type="submit" class="button" value="Go">Go</button>
                     </form>
                 </div>
             </div>
@@ -183,12 +183,12 @@
     <div class="bgSubmit bground" id="success">
         <div class="content" id="success-content">
 
-            <span class="close" id="sucClose" onclick="setTimeout(function () { window.location.reload(); }, 2)"></span>
+            <span class="close" id="sucClose"></span>
             <p class="hero-text" id="success-text">
                 Thank you for<br> submitting your <br> registration details
             </p>
             <!--Close Button Here-->
-            <input class="btn-submit" type="submit" id="submit-success" class="button" value="Close" onclick="setTimeout(function () { window.location.reload(); }, 2)" />
+            <button class="btn-submit" type="submit" id="submit-success" class="button" value="Close">Close</button>
 
         </div>
     </div>
