--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
             </a>
         </div>
     </div>
-    </div>
+
     <main>
         <div class="hero-section">
             <div class="hero-content">
@@ -155,7 +155,7 @@
                   name="checkbox1"
                   value="yes"
                 />
-                <label class="checkbox2-label" for="checkbox1" required>
+                <label class="checkbox2-label" for="checkbox1">
                   <span class="checkbox-icon"></span>
                   I have read and I agree to the terms and conditions.
                 </label>
@@ -168,10 +168,11 @@
                 </label>
                             <br>
                         </div>
-                        <button class="btn-submit" type="submit" class="button" value="Go">Go</button>
+                        <button class="btn-submit button" type="submit" value="Go">Go</button>
                     </form>
                 </div>
             </div>
+        </div>
 
 
     </main>
@@ -180,6 +181,7 @@
             Copyright 2014 - 2020, GameOn Inc.
         </p>
     </footer>
+    <!-- succes page-->
     <div class="bgSubmit bground" id="success">
         <div class="content" id="success-content">
 
@@ -188,10 +190,10 @@
                 Thank you for<br> submitting your <br> registration details
             </p>
             <!--Close Button Here-->
-            <button class="btn-submit" type="submit" id="submit-success" class="button" value="Close">Close</button>
+            <button class="btn-submit button" type="submit" id="submit-success" value="Close">Close</button>
+
 
         </div>
-    </div>
     </div>
     <script src="js/modal.js"></script>
     <script src="js/form2.js"></script>
